monitoreo/mosquitto/04-mosquitto-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: monitoreo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      name: mosquitto
      labels:
        app: mosquitto
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:1.6.8
        ports:
        - name: mosquitto
          containerPort: 1883
        - name: ws
          containerPort: 9001
        resources:
          limits:
            memory: "1Gi"
            cpu: "600m"
          requests: 
            memory: "500Mi"
            cpu: "400m"
        volumeMounts:
          - mountPath: /mosquitto/data
            name: mosquitto-data
          - mountPath: /mosquitto/log
            name: mosquitto-data
          - mountPath: /mosquitto/config/
            name: mosquitto-conf
            readOnly: false
      volumes:
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-data
        - name: mosquitto-log
          persistentVolumeClaim:
            claimName: mosquitto-log
        - name: mosquitto-conf
          configMap:
              defaultMode: 420
              name: mosquitto-conf
