monitoreo/mosquitto/05-mosquitto-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: monitoreo
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  type: LoadBalancer
  loadBalancerIP: 192.168.1.192
  ports:
  - name: mosquitto
    port: 1883
  - name: ws
    port: 9001
