monitoreo/mosquitto/06-mosquitto-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mosquitto
  namespace: monitoreo
spec:
  rules:
  - host: mosquitto.internal.local.com
    http:
      paths:
      - path: /
        backend:
         serviceName: mosquitto
         servicePort: 9001
